# django_cityloc_pkg_beebojones

./: LICENSE.txt  README.rst  setup.cfg  setup.py
.github/workflows/: publish_pkg.yaml
docs/: conf.py  index.rst
