[metadata]
name = django_cityloc_pkg_beebojones
version = 0.0.1
description = A Django app about city locations
author = Beebo Jones
author_email = your_email@example.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
